tests/float01_err.json.err
Parse error at line 1

001: {"val": 02e4}
             ^
Leading zero in float
